<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.appsnicolas.huilatravel.ui.home.HomeFragment"
        android:label="@string/title_inicio"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_rutas"
        android:name="com.appsnicolas.huilatravel.ui.rutas.RutasFragment"
        android:label="@string/title_rutas"
        tools:layout="@layout/fragment_rutas">
        <!-- Acción para ir al itinerario -->
        <action
            android:id="@+id/action_rutas_to_itinerario"
            app:destination="@id/navigation_itinerario" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favoritos"
        android:name="com.appsnicolas.huilatravel.ui.favoritos.FavoritosFragment"
        android:label="@string/title_favoritos"
        tools:layout="@layout/fragment_favoritos" />

    <fragment
        android:id="@+id/navigation_perfil"
        android:name="com.appsnicolas.huilatravel.ui.perfil.PerfilFragment"
        android:label="@string/title_perfil"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/navigation_itinerario"
        android:name="com.appsnicolas.huilatravel.ui.rutasItenerario.ItinerarioFragment"
        android:label="Itinerario"
        tools:layout="@layout/fragment_itinerario">
        <argument
            android:name="routeTitle"
            app:argType="string"
            android:defaultValue="Ruta" />
    </fragment>

</navigation>
